syntax="proto3";
package proto;
option go_package = "core/proto;proto";

message ConnectorRequest {
  int64 id = 1;
  map<string,string>  params = 2;
}

message ConnectorResponse {
  int64 document_id = 1;
  string content = 2;
}

message ChunkingResponse {
    int64  document_id = 1;
    repeated  string chunks = 2;
}

message EmbeddAsyncRequest {
  int64 document_id = 1;
  int64 chunk_id = 2;
  string content = 3;
  string model_id = 4;
}

message EmbeddAsyncResponse {
  int64 document_id = 1;
  int64 chunk_id = 2;
  string content = 3;
  repeated float vector = 4;
}